# KnightVision

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: release-guardrails.yml
analytics/dbt/: dbt_project.yml  profiles.yml
dashboard/: __init__.py  app.py  db.py
dashboard/components/: __init__.py  charts.py  chessboard.py  layout.py
dashboard_api/: __init__.py  app.py  artifacts.py  db.py  dev.py
dashboard_web/: index.html  package-lock.json  package.json  vite.config.js
docs/: DATA_QUALITY.md  FEATURES.md  KAFKA_PRODUCER.md  MACHINE_LEARNING.md  MODEL_CARDS.md  RELEASE_GUARDRAILS.md  STOCKFISH_BLUNDER_ANALYTICS.md
fixtures/: eco_sample.csv  sample_lichess.pgn
ingestion/: __init__.py  downloader.py  kafka_producer.py  pgn_parser.py  schema.py
ml/: __init__.py
ml/common/: __init__.py  (+1 more)
notebooks/: 03_blunder_predictor.ipynb  04_opening_outcome_prediction.ipynb  05_player_style_clustering.ipynb
orchestration/: Dockerfile.airflow  __init__.py  docker-compose.airflow.yml  notify.py  requirements-airflow.txt
pipeline/: __init__.py  spark_session.py
tests/: conftest.py  test_blunder_positions.py  test_blunder_predictor.py  test_dashboard_api.py  test_downloader.py  test_gold_aggregations.py  test_kafka_producer.py  test_opening_outcome_predictor.py  test_orchestration_guardrails.py  test_pgn_parser.py  test_player_style_clustering.py  test_quality_checks.py  test_silver_transform.py  test_silver_transforms.py
warehouse/: init_db.py  schema.sql
(+91 files in other folders)
