[project]
name = "knightvision"
version = "0.1.0"
description = "Chess analytics data platform over Lichess public dumps."
requires-python = ">=3.10,<3.12"
dependencies = [
    "apache-airflow==2.9.3",
    "apache-airflow-providers-postgres==5.11.2",
    "dbt-core==1.8.7",
    "dbt-duckdb==1.8.3",
    "duckdb==1.1.3",
    "fastapi==0.115.4",
    "httpx==0.27.2",
    "joblib==1.4.2",
    "matplotlib==3.9.2",
    "nbformat==5.10.4",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "pendulum==3.0.0",
    "plotly==5.24.1",
    "pyarrow==17.0.0",
    "pydantic==2.9.2",
    "pyspark==3.5.3",
    "python-chess==1.999",
    "scikit-learn==1.5.2",
    "streamlit==1.39.0",
    "uvicorn==0.32.0",
    "xgboost==2.1.1",
    "zstandard==0.25.0",
]

[project.optional-dependencies]
dev = [
    "pip-audit==2.7.3",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "ruff==0.6.9",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["ingestion", "pipeline", "dashboard_api"]
omit = ["pipeline/gold/blunder_positions.py"]

[tool.coverage.report]
fail_under = 50
show_missing = true
skip_covered = false

